# vsc-server-setup

./: .dockerignore  .gitignore  BLANK_README.md  Dockerfile  README.md  README.zh-CN.md  config.json.template  docker-compose.yml  go.mod  go.sum  main.go  main.py  note.sh  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml
scripts/: vsc_server_setup.sh
src/: main.py
src/fetch/: install-lastest-vsc.sh
src/fetch/cn/: install-lastest-vsc.sh
src/sync/: README.md  index.py  main.py
tmp/: 1.sh  1.txt  todo.txt
