[tool.poetry]
name = "vsc-server-setup"
version = "0.1.0"
description = "setup VSCode server"
authors = ["117503445 <t117503445@gmail.com>"]
license = "GNU/GPL V3"
readme = "README.md"
packages = [{include = "vsc_server_setup"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.30.0"}
paramiko = "^3.1.0"
message-pusher-sdk = "^0.1.0"
htutil = "^3.2.0"
types-paramiko = "^3.2.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
